apps/pyrite/server-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pyrite-server
  labels:
    app.kubernetes.io/name: pyrite-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pyrite-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pyrite-server
    spec:
      containers:
      - name: main
        image: docker.io/tintinho/pyrite-server:774d5e1
        ports:
        - containerPort: 7100
