apps/pyrite/client-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: pyrite-client
spec:
  selector:
    app.kubernetes.io/name: pyrite-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
