apps/pyrite/server-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: pyrite-server
spec:
  selector:
    app.kubernetes.io/name: pyrite-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 7100
  type: ClusterIP
